<resources>
    <string name="app_name">platzigram</string>
    <string name="hint_user">Nombre de Usuario</string>
    <string name="hint_passwor">Contraseña</string>
    <string name="text_btnlogin">Login</string>
    <string name="text_notaccount">¿No tienes cuenta? Crea una aqui</string>
    <string name="hint_correo">Correo</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_confirmpasswor">Confirma Contraseña</string>
    <string name="text_unete">Unete</string>
    <string name="toolbar_title">Crear cueta</string>
    <string name="username_Card">Omar Lopez</string>
    <string name="first_textcard">Hace</string>
    <string name="timecard">4 Dias</string>
    <string name="likenumber_card">10 Likes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_profile">Perfil</string>
    <string name="tab_home">Home</string>
    <string name="like">Me Gusta</string>
    <string name="Title_Imagedetail">Todo copas en la Playa</string>
    <string name="lorem">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años.</string>
    <string name="transitionName_picture">trancicion Name picture</string>
    <string name="btn_tomarfoto">Tomar Foto</string>
    <string name="facebook_app_id">1510034809066401</string>
    <string name="fb_login_protocol_scheme">fb1510034809066401</string>

</resources>
