<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.lopsa.platzigram.createaccountActivity">
<include    layout="@layout/actionbar_toolbar"/>

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="20dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="25dp">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/editTextblack">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtcorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_correo"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/editTextblack">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtnombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_nombre"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/editTextblack">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtusuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_usuario"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/editTextblack">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtcontrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_passwor"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/editTextblack">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtconfircontrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_confirmpasswor"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btncreateaccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_unete"
            android:layout_marginTop="22dp"
            android:theme="@style/Raisebutton"/>
    </LinearLayout>

</ScrollView>


</android.support.design.widget.CoordinatorLayout>
