<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lopsa.platzigram.LoginActivity"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:weightSum="1">

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_weight="0.6">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/platzigram"
                android:layout_below="@+id/profi_image"
                android:layout_alignLeft="@+id/profi_image"
                android:layout_alignStart="@+id/profi_image" />

           <de.hdodenhof.circleimageview.CircleImageView
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:id="@+id/profi_image"
               android:layout_width="90dp"
               android:layout_height="90dp"
               android:src="@drawable/image"
               app:civ_border_width="2dp"
               app:civ_border_color="#FFFFFF"
               android:layout_centerInParent="true"/>
       </RelativeLayout>
       <ScrollView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:fillViewport="true"
           android:layout_weight="0.4">


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:padding="10dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/editTextWhite">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtuser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hint_user"/>
            </android.support.design.widget.TextInputLayout>

               <android.support.design.widget.TextInputLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:theme="@style/editTextWhite">
                   <android.support.design.widget.TextInputEditText
                      android:id="@+id/txtpassword"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="10dp"
                       android:hint="@string/hint_passwor"
                       android:inputType="textPassword"/>
               </android.support.design.widget.TextInputLayout>

           <Button
               android:id="@+id/btnlogin"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/text_btnlogin"
               android:theme="@style/Raisebutton"/>
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:gravity="center"
               android:fitsSystemWindows="true">

               <TextView
                   android:id="@+id/lblcreateaccount"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textColor="@android:color/white"
                   android:text="@string/text_notaccount"
                   android:layout_marginBottom="25dp"/>
           </RelativeLayout>
       </LinearLayout>
       </ScrollView>
   </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
