<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.lopsa.platzigram.PicturedetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:theme="@style/AppTheme.PopupOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsinToolbardetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary">

            <ImageView
                android:id="@+id/ImageHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:background="@drawable/image"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin">

            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/UserNameDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_Card"
                android:textSize="25sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp">


                <TextView
                    android:id="@+id/LikeNumberDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="10" />
                <TextView
                    android:id="@+id/LikeDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/like"
                    android:paddingLeft="7dp"/>


            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/TitleImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/Title_Imagedetail"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:paddingTop="20dp"/>
            <TextView
                android:id="@+id/TextContentImageDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/lorem"
                android:layout_gravity="center_horizontal"
                android:paddingTop="10dp"
                android:paddingLeft="35dp"
                android:paddingRight="35dp"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:text="Amornchai"
        android:textSize="18dp"
        android:elevation="10dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="-20dp"
        android:gravity="center_vertical"
        android:textColor="@android:color/white"
        android:alpha="0"
        app:layout_behavior="com.zoonref.SimpleViewBehavior"
        app:dependsOn="@+id/appBar"
        app:dependType="y"
        app:dependTargetY="-206dp"
        app:targetY="0dp"
        app:targetAlpha="1"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnfablike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/heart"
        app:layout_anchor="@id/appBar"
        app:layout_anchorGravity="bottom|end"
        android:layout_margin="8dp"/>

</android.support.design.widget.CoordinatorLayout>
